Changes texts and images into km service relevant stuff

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@ title: Urban
 
 <section class="hero diagonal">
 	<div class="container">
-		<h2 class="editable">We build websites</h2>
-		<p class="subtext editable">This is the <strong>Urban</strong> template from <a href="http://cloudcannon.com/">CloudCannon</a>. Urban is a strong foundation for the web presence of your agency.</p>
-		<p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p>
+		<h2 class="editable">Din servicepartner</h2>
+		<p class="subtext editable">God service og <strong>høj kvalitet</strong>. Evt. lidt mere tekst som kort forklarer hvad KM Service er.</p>
+		<p><a class="button alt" href="{{ site.baseurl }}/contact/">Kontakt os</a></p>
 	</div>
 </section>
 
 <section class="diagonal patterned">
 	<div class="container halves">
 		<div>
-			<h3 class="editable">Some of our work</h3>
-			<p class="editable">We take pride in our previous work and our happy customers. We cater to any sector to boost business and increase exposure.</p>
-			<p class="editable"><a href="{{ site.baseurl }}/portfolio/">View Full Portfolio &rarr;</a></p>
+			<h3 class="editable">Vores services</h3>
+			<p class="editable">Vi udfører arbejde af høj kvalitet inden for malerarbejder, vinduespudsning og rengøring.</p>
+			<p class="editable"><a href="{{ site.baseurl }}/services/">Læs mere &rarr;</a></p>
 		</div>
 		<div>
 			<ul class="image-grid">
-				{% for client in site.clients limit: 4 %}
-					<li><a href="{{ site.baseurl }}{{ client.url }}"><img src="{% include relative-src.html src=client.image_path %}"></a></li>
+				{% for service in site.clients limit: 4 %}
+					<li><a href="{{ site.baseurl }}{{ service.url }}"><img src="{% include relative-src.html src=service.image_path %}"></a></li>
 				{% endfor %}
 			</ul>
 		</div>
