--- a/kontakt.html
+++ b/kontakt.html
@@ -1,11 +1,11 @@
 ---
 title: Contact
-heading: Get in touch today
-subtitle: We'd love to help your business.
+heading: Kom i kontakt med os
+subtitle: Vi vil meget gerne høre fra dig
 map:
-  latitude: -45.8787605
-  longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
+  latitude: 57.0295776
+  longitude: 9.92864499999996
+  address: "Gammel Gugvej 35, 9000 Aalborg, Denmark"
   zoom: 13
 ---
 
@@ -17,23 +17,23 @@ map:
 
 			<div class="halves">
 				<div>
-					<label for="name">First Name</label>
-					<input type="text" name="first-name" id="first-name" placeholder="John" />
+					<label for="name">Fornavn</label>
+					<input type="text" name="first-name" id="first-name" placeholder="Fornavn" />
 				</div>
 
 				<div>
-					<label for="name">Last Name</label>
-					<input type="text" name="last-name" id="last-name" placeholder="Doe" />
+					<label for="name">Efternavn</label>
+					<input type="text" name="last-name" id="last-name" placeholder="Efternavn" />
 				</div>
 			</div>
 
-			<label for="email">Email Address</label>
-			<input type="email" name="email" id="email" placeholder="john@example.com" required />
+			<label for="email">Emailaddresse</label>
+			<input type="email" name="email" id="email" placeholder="navn@domæne.dk" required />
 
-			<label for="message">Message</label>
-			<textarea name="message" id="message" placeholder="Hi There..."></textarea>
+			<label for="message">Besked</label>
+			<textarea name="message" id="message" placeholder="Din besked..."></textarea>
 
-			<input type="submit" value="Send Message" />
+			<input type="submit" value="Send besked" />
 		</form>
 	</div>
 </section>
