--- a/om-os.html
+++ b/om-os.html
@@ -1,7 +1,7 @@
 ---
-title: About
-heading: Our team
-subtitle: Meet our efficient and qualified team.
+title: Om os
+heading: Vores servicemedarbejdere
+subtitle: Mød vores effektive og kvalitetsbevidste team
 ---
 
 <section class="diagonal patterned">
