More changes to fit KM Service reality

--- a/kontakt.html
+++ b/kontakt.html
@@ -39,7 +39,8 @@ map:
 </section>
 
 <section class="diagonal map">
-	<div id="gmap_canvas"></div>
+	<image src="/images/map.png"></image>
+	<!--div id="gmap_canvas"></div-->
 </section>
 
 <section class="diagonal">
