--- a/services.html
+++ b/services.html
@@ -1,20 +1,20 @@
 ---
-title: Portfolio
-heading: Our Work
-subtitle: See some of our proud customers with exemplary results.
+title: Services
+heading: Det er det vi tilbyder
+subtitle: Overblik over de services vi tilbyder
 ---
 
 <section class="diagonal patterned">
 	<div class="container">
 	    <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_clients/" class="btn"><strong>&#9998;</strong> Manage Clients</a></p>
 		<ul class="image-grid">
-			{% for client in site.clients %}
+			{% for service in site.clients %}
 				<li>
-					<a href="{{ site.baseurl }}{{ client.url }}">
-						<img src="{% include relative-src.html src=client.image_path %}" alt="{{ person.name }}">
+					<a href="{{ site.baseurl }}{{ service.url }}">
+						<img src="{% include relative-src.html src=service.image_path %}" alt="{{ person.name }}">
 						<div class="details">
-							<div class="name">{{ client.name }}</div>
-							<div class="position">{{ client.subtitle }}</div>
+							<div class="name">{{service.name }}</div>
+							<div class="position">{{ service.subtitle }}</div>
 						</div>
 					</a>
 				</li>
