--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: KM Service
 	<div class="container halves">
 		<div>
 			<ul class="image-list">
-				<li><img src="{{ site.baseurl }}/images/gdprcompliant.png" width="250" style="margin-bottom: 40px;"></li>
+				<li><img src="{{ site.baseurl }}/images/eu-gdpr-compliant.png" width="250" style="margin-bottom: 40px;"></li>
 				<!--li><img src="{{ site.baseurl }}/images/jekyll-logo-black-red-transparent.png" width="300"></li-->
 			</ul>
 		</div>
