--- a/kontakt.html
+++ b/kontakt.html
@@ -39,7 +39,7 @@ map:
 </section>
 
 <section class="diagonal map">
-	<image src="/images/map.png"></image>
+	<image src="{{ site.baseurl }}/images/map.png"></image>
 	<!--div id="gmap_canvas"></div-->
 </section>
 
