--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: KM Service
 	<div class="container">
 		<h2 class="editable">Din servicepartner</h2>
 		<p class="subtext editable">God service og <strong>høj kvalitet</strong>. Evt. lidt mere tekst som kort forklarer hvad KM Service er.</p>
-		<p><a class="button alt" href="{{ site.baseurl }}/contact/">Kontakt os</a></p>
+		<p><a class="button alt" href="{{ site.baseurl }}/kontakt/">Kontakt os</a></p>
 	</div>
 </section>
 
@@ -37,7 +37,7 @@ title: KM Service
 		</div>
 		<div>
 			<h3 class="editable">Vi lever op til GDPR</h3>
-			<p class="editable">Her skal der være noget tekst om hvordan KM Sevice lever op tik GDPR.</p>
+			<p class="editable">Her skal der være noget tekst om hvordan KM Sevice lever op til persondataforordningen.</p>
 		</div>
 	</div>
 </section>
