--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: KM Service
 		</div>
 		<div>
 			<h3 class="editable">Vi lever op til GDPR</h3>
-			<p class="editable">Her skal der være noget tekst om hvordan KM Sevice lever op til persondataforordningen.</p>
+			<p class="editable">Her skal der være noget tekst om hvordan KM Service lever op til persondataforordningen.</p>
 		</div>
 	</div>
 </section>
